fix image gallery spacing

--- a/_assets/scss/modules/_image-gallery.scss
+++ b/_assets/scss/modules/_image-gallery.scss
@@ -14,6 +14,11 @@
   @extend %row;
   margin-right: -12px !important;
 }
+.gallery-thumbnails-empty {
+  @include breakpoint($mobile) {
+    margin-bottom: $unit-3;
+  }
+}
 
 .gallery-thumbnail {
   margin-top: $unit/2;
@@ -71,4 +76,3 @@
       }*/
     }
 }
-
